removing driver form repo

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,4 @@ google-chrome-stable_current_amd64.deb
 microsoft-edge-stable_123.0.2420.97-1_amd64.deb
 LATEST_RELEASE
 LICENSE.chromedriver
-#driver
+driver
